lib_LTLIBRARIES = libgdiplus.la

libgdiplus_la_SOURCES = \
	adjustablearrowcap.c	\
	bitmap.c	\
	brush.c		\
	brush.h		\
	customlinecap.c	\
	customlinecap.h	\
	font.c		\
	gdip.h		\
	gdipImage.h	\
	gdip_win32.c	\
	gdip_win32.h	\
	general.c	\
	graphics.c	\
	graphics-path.c	\
	graphics-path.h	\
	hatchbrush.c	\
	hatchbrush.h	\
	image.c		\
	lineargradientbrush.c \
	lineargradientbrush.h \
	matrix.c	\
	pen.c		\
	pathgradientbrush.c \
	pathgradientbrush.h \
	region.c	\
	solidbrush.c	\
	solidbrush.h	\
	stringformat.c	\
	texturebrush.c	\
	texturebrush.h	\
	pngcodec.h	\
	pngcodec.c	\
	gifcodec.h	\
	gifcodec.c	\
	tiffcodec.h	\
	tiffcodec.c	\
	bmpcodec.h	\
	bmpcodec.c	\
	jpegcodec.h	\
	imageattributes.c \
	jpegcodec.c

libgdiplus_la_LIBADD = $(GDIPLUS_LIBS)

INCLUDES = $(GDIPLUS_CFLAGS) -Wall -Werror -Wno-unused -Wno-format
