lib_LTLIBRARIES = libgdiplus.la

libgdiplus_la_SOURCES = \
	adjustablearrowcap.c	\
	alpha-premul-table.inc	\
	bitmap.c	\
	brush.c		\
	brush.h		\
	customlinecap.c	\
	customlinecap.h	\
	font.c		\
	gdip.h		\
	gdipImage.h	\
	general.c	\
	general.h	\
	graphics.c	\
	graphics.h	\
	graphics-path.c	\
	graphics-path.h	\
	graphics-pathiterator.c	\
	hatchbrush.c	\
	hatchbrush.h	\
	image.c		\
	lineargradientbrush.c \
	lineargradientbrush.h \
	matrix.c	\
	matrix.h	\
	pen.c		\
	pathgradientbrush.c \
	pathgradientbrush.h \
	region.c	\
	region.h	\
	region-bitmap.c	\
	region-bitmap.h	\
	region-path-tree.c	\
	region-path-tree.h	\
	solidbrush.c	\
	solidbrush.h	\
	stringformat.c	\
	texturebrush.c	\
	texturebrush.h	\
	pngcodec.h	\
	pngcodec.c	\
	gifcodec.h	\
	gifcodec.c	\
	tiffcodec.h	\
	tiffcodec.c	\
	bmpcodec.h	\
	bmpcodec.c	\
	jpegcodec.h	\
	imageattributes.c \
	jpegcodec.c \
	dstream.c  \
	dstream.h


libgdiplus_la_LIBADD = $(GDIPLUS_LIBS)

INCLUDES = $(GDIPLUS_CFLAGS) -Wall -Wno-unused -Wno-format
